--- a/TeleChurn.ipynb
+++ b/TeleChurn.ipynb
@@ -767,12 +767,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Análisis"
+    "# Analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -787,26 +787,26 @@
     }
    ],
    "source": [
-    "# Seleccionar las variables para el mapa de correlación\n",
+    "# Selecting variables for the correlation map\n",
     "X_train = dftrain[['Contract_Month-to-month', 'Contract_Two year', 'tenure', 'InternetService_Fiber optic', \n",
     "                   'PaymentMethod_Electronic check', 'MonthlyCharges', 'OnlineSecurity', \n",
     "                   'TechSupport', 'MultipleLines', 'Churn']]\n",
     "y_train = dftrain['Churn']\n",
     "\n",
-    "# Calcular la matriz de correlación\n",
+    "# Calculate correlation map\n",
     "corr_matrix = X_train.corr()\n",
     "\n",
-    "# Configurar el tamaño de la figura\n",
+    "# Set the figure size\n",
     "plt.figure(figsize=(20, 16))\n",
     "\n",
-    "# Generar el heatmap de correlación\n",
+    "# Generate correlation map\n",
     "sns.heatmap(corr_matrix, annot=True, cmap='coolwarm', fmt='.1f', vmin=-1, vmax=1,\n",
     "            annot_kws={\"size\": 8}, cbar_kws={\"shrink\": .8})\n",
     "\n",
-    "# Rotar las etiquetas para una mejor legibilidad\n",
+    "# otate labels for better readability\n",
     "plt.xticks(rotation=45, ha='right', fontsize=10)\n",
     "plt.yticks(fontsize=10)\n",
-    "# Ajustar el diseño para una mejor visibilidad\n",
+    "# Adjust the layout for better visibility\n",
     "plt.tight_layout()\n",
     "\n",
     "plt.title('Correlation Heatmap', fontsize=16)\n",
@@ -1037,7 +1037,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Prueba Modelo NO Supervisado"
+    "# UNsupervised Model Test"
    ]
   },
   {
@@ -1113,7 +1113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generar Clusters con K-Means"
+    "# Generate Clusters with K-Means"
    ]
   },
   {
@@ -1161,7 +1161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Entrenar Modelo Supervisado con Clusters"
+    "# Train Supervised Model with Clusters"
    ]
   },
   {
@@ -1206,7 +1206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Prueba Modelos Supervisados"
+    "# Test Supervised Models"
    ]
   },
   {
@@ -1636,7 +1636,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Comparativa Modelos"
+    "# Models Comparison "
    ]
   },
   {
@@ -1852,7 +1852,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MODELO FINAL"
+    "# FINAL MODEL (VARIABLES)"
    ]
   },
   {
@@ -1885,7 +1885,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Modelo Final de Regresión Logística Balanceado y con ajuste de hiperparámetros"
+    "# Final Logistic Regression Model, Normalised, Balanced and hyperparameter adjustment"
    ]
   },
   {
