--- a/TeleChurn.ipynb
+++ b/TeleChurn.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Libraries"
+    "# <span style= 'color:#21E9C5' > **Libraries** </span>"
    ]
   },
   {
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data load "
+    "# <span style= 'color:#21E9C5' > **Data load** </span>"
    ]
   },
   {
@@ -277,7 +277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data exploration"
+    "# <span style= 'color:#21E9C5' > **Data exploration** </span>"
    ]
   },
   {
@@ -649,7 +649,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preprocessing"
+    "# <span style= 'color:#21E9C5' > **Preprocessing** </span>"
    ]
   },
   {
@@ -767,7 +767,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analysis"
+    "# <span style= 'color:#21E9C5' > **Analysis** </span>"
    ]
   },
   {
@@ -1037,7 +1037,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# UNsupervised Model Test"
+    "# <span style= 'color:#21E9C5' > **UNsupervised Model Test** </span>"
    ]
   },
   {
@@ -1113,7 +1113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate Clusters with K-Means"
+    "# <span style= 'color:#21E9C5' > **Generate Clusters with K-Means** </span>"
    ]
   },
   {
@@ -1161,7 +1161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train Supervised Model with Clusters"
+    "# <span style= 'color:#21E9C5' > **Train Supervised Model with Clusters** </span>"
    ]
   },
   {
@@ -1206,7 +1206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Test Supervised Models"
+    "# <span style= 'color:#21E9C5' > **Test Supervised Models** </span>"
    ]
   },
   {
@@ -1636,7 +1636,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Models Comparison "
+    "# <span style= 'color:#21E9C5' > **Models Comparison** </span>"
    ]
   },
   {
@@ -1645,7 +1645,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Resultados\n",
+    "# Results\n",
     "results = {\n",
     "    'Model': ['Decision Tree', 'Random Forest', 'Gradient Boosting', 'Logistic Regression', 'SVM', 'ANN'],\n",
     "    'Accuracy': [0.73, 0.78, 0.78, 0.79, 0.78, 0.78],\n",
@@ -1744,7 +1744,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Comparativa Modelos con Pipeline de Regularización y Balanceo"
+    "# <span style= 'color:#21E9C5' > **Models Comparison with Regularization and Balancing Pipeline** </span>"
    ]
   },
   {
@@ -1753,7 +1753,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Resultados Pipeline Regularizacion y Balanceo\n",
+    "# Pipeline results with Normalisation and Balancing\n",
     "results = {\n",
     "    'Model N&B': ['Decision Tree N&B', 'Random Forest N&B', 'Gradient Boosting N&B', 'Logistic Regression N&B', 'SVM N&B', 'ANN N&B'],\n",
     "    'Accuracy': [0.72, 0.75, 0.75, 0.69, 0.75, 0.76],\n",
@@ -1852,7 +1852,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# FINAL MODEL (VARIABLES)"
+    "# <span style= 'color:#21E9C5' > **FINAL MODEL (Variables)** </span>"
    ]
   },
   {
@@ -1861,7 +1861,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Separar variables predictoras y variable objetivo\n",
+    "# Split predictive variables yand target variable\n",
     "X_train = dftrain[['Contract_Month-to-month', 'Contract_Two year', 'tenure', 'InternetService_Fiber optic', 'PaymentMethod_Electronic check', 'MonthlyCharges', \n",
     "                   'OnlineSecurity', 'TechSupport', 'MultipleLines']]# ACCURACY 0.79, PRECISION 0.83, RECALL: 0.91(GBC)\n",
     "y_train = dftrain['Churn']\n",
@@ -1869,7 +1869,7 @@
     "                 'OnlineSecurity', 'TechSupport', 'MultipleLines']]# ACCURACY 0.79, PRECISION 0.83, RECALL: 0.91(GBC)\n",
     "y_test = dftest['Churn']\n",
     "\n",
-    "# Separar cvariables predictoras y variable objetivo\n",
+    "# Split predictive variables yand target variable\n",
     "#X_train = dftrain.drop('Churn', axis=1) MEJOR OPCION POR EL MOMENTO\n",
     "#X_train = dftrain[['Contract_Month-to-month', 'Contract_Two year', 'Contract_One year', 'tenure']]# ACCURACY 0.75, PRECISION 0.79, RECALL: 0.90(GBC)\n",
     "#X_train = dftrain[['Contract_Month-to-month', 'Contract_Two year', 'Contract_One year', 'tenure', 'InternetService_Fiber optic', 'PaymentMethod_Electronic check', 'MonthlyCharges', 'TotalCharges']]# ACCURACY 0.78, PRECISION 0.83, RECALL: 0.89(GBC)\n",
@@ -1885,7 +1885,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Final Logistic Regression Model, Normalised, Balanced and hyperparameter adjustment"
+    "# <span style= 'color:#21E9C5' > **Final Logistic Regression Model, Normalised, Balanced and hyperparameters adjusted** </span>"
    ]
   },
   {
@@ -1894,14 +1894,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# MODELO FINAL: Logistic Regression con Pipeline de Normalización y Balanceo\n",
+    "# FINAL MODEL: Logistic Regression with Pipeline of Normalisation and Balancing\n",
     "pipeline = Pipeline([\n",
     "    ('smote', SMOTE(random_state=42)),\n",
     "    ('scaler', StandardScaler()),\n",
     "    ('classifier', LogisticRegression(random_state=42, max_iter=1000))\n",
     "])\n",
     "\n",
-    "# Definir el grid de hiperparámetros mejorado\n",
+    "# Define  improved hiperparameters grid\n",
     "param_grid = {\n",
     "    'smote__sampling_strategy': [0.5, 0.6, 0.7, 0.75, 0.8, 0.85, 0.9, 1.0],  # Más estrategias de muestreo\n",
     "    'smote__k_neighbors': [3, 5, 7, 9, 11, 13],  # Rango más amplio de vecinos\n",
@@ -1910,22 +1910,22 @@
     "    'classifier__solver': ['lbfgs', 'saga', 'liblinear', 'newton-cg']  # Incluir más solvers\n",
     "}\n",
     "\n",
-    "# Usar GridSearchCV para encontrar los mejores hiperparámetros\n",
+    "# Use GridSearchCV to find the best hyperparameters\n",
     "grid_search = GridSearchCV(pipeline, param_grid, scoring='recall', refit=True, verbose=2, cv=3)\n",
     "grid_search.fit(X_train, y_train)\n",
     "\n",
-    "# Obtener los mejores parámetros\n",
+    "# Obtain the best parameters\n",
     "best_params = grid_search.best_params_\n",
     "print(f'Mejor combinación de parámetros: {best_params}')\n",
     "\n",
-    "# Evaluar el modelo en el conjunto de prueba\n",
+    "# Evaluate model on the test dataset\n",
     "best_model = grid_search.best_estimator_\n",
     "y_pred = best_model.predict(X_test)\n",
     "\n",
     "print(\"Logistic Regression with SMOTE Accuracy:\", accuracy_score(y_test, y_pred))\n",
     "print(\"Logistic Regression with SMOTE Classification Report:\\n\", classification_report(y_test, y_pred))\n",
     "\n",
-    "# Validación cruzada estratificada\n",
+    "# Crossed Validation Stratified\n",
     "skf = StratifiedKFold(n_splits=5)\n",
     "cv_scores = cross_val_score(best_model, X_train, y_train, cv=skf, scoring='recall')\n",
     "print(f'Puntuaciones de validación cruzada (recall): {cv_scores}')\n",
@@ -1946,7 +1946,7 @@
     }
    ],
    "source": [
-    "# Guardar el modelo en un archivo pickle\n",
+    "# Save model in pickle\n",
     "with open('models/best_model.pkl', 'wb') as model_file:\n",
     "    pickle.dump(best_model, model_file)\n",
     "\n",
@@ -1957,7 +1957,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Confusion Matrix"
+    "# <span style= 'color:#21E9C5' > **Confusion Matrix** </span>"
    ]
   },
   {
@@ -1985,17 +1985,17 @@
     }
    ],
    "source": [
-    "# Predicciones\n",
+    "# Predictions\n",
     "y_pred = best_model.predict(X_test)\n",
     "\n",
-    "# Verificar las dimensiones\n",
+    "# Check dimensions\n",
     "print(f\"Dimensiones de y_test: {y_test.shape}\")\n",
     "print(f\"Dimensiones de y_pred: {y_pred.shape}\")\n",
     "\n",
-    "# Generar la matriz de confusión\n",
+    "# Generate Confusion Matrix\n",
     "conf_matrix = confusion_matrix(y_test, y_pred)\n",
     "\n",
-    "# Visualizar la matriz de confusión\n",
+    "# Visualise Confusion Matrix\n",
     "plt.figure(figsize=(10, 7))\n",
     "sns.heatmap(conf_matrix, annot=True, fmt='d', cmap='Blues', xticklabels=['No Churn', 'Churn'], yticklabels=['No Churn', 'Churn'])\n",
     "plt.xlabel('Predicted')\n",
@@ -2028,11 +2028,11 @@
     }
    ],
    "source": [
-    "# Cargar el modelo desde el archivo pickle\n",
+    "# Load model from pickle\n",
     "with open('models/best_model.pkl', 'rb') as model_file:\n",
     "    loaded_model = pickle.load(model_file)\n",
     "\n",
-    "# Usar el modelo cargado para predecir\n",
+    "# Use loaded model to predict\n",
     "new_predictions = loaded_model.predict(X_test)\n",
     "\n",
     "print(\"New Predictions Accuracy:\", accuracy_score(y_test, new_predictions))\n",
@@ -2045,7 +2045,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Probar con un usuario\n",
+    "# Test model with an user\n",
     "with open('models/best_model.pkl', 'rb') as f:\n",
     "    loaded_model = pickle.load(f)\n",
     "y_pred = loaded_model.predict(X_test[0:1])"
